...
                    }
                    .frame(width: 140, height: 30) // Taille uniforme
                    .padding()
                    .background(Color("Mygreen"))
                    .foregroundStyle(.white)
                    .clipShape(RoundedRectangle(cornerRadius: 10))
                    .accessibilityIdentifier("buttonRecruteur")
                    
                
                    Button{
                        myUserType = .talent
                    }label:{
                        Text("Talent")
...
                    }
                    .frame(width: 140, height: 30) // Taille uniforme
                    .padding()
                    .background(Color("Mygreen2"))
                    .foregroundStyle(.white)
                    .clipShape(RoundedRectangle(cornerRadius: 10))
                    .accessibilityIdentifier("buttonTalent")
                    
                    
                }// fin de mon HStack buttons
                
            }//fin de mon VStack
        }
...
